<resources>
    <string name="app_name">NoteKeeper</string>
    <string name="title_activity_note">Edit Name</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="notes">Notes</string>
    <string name="courses">Courses</string>
    <string name="menu_send">Send</string>
    <string name="note_title_hint">Note title</string>
    <string name="note_text_hint">Note Text</string>
    <string name="nav_share_message">Don\'t you think you\'ve shared enough</string>
    <string name="nav_send_message">Send</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="general_header">General</string>

    <!-- Messages Preferences -->
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your Name</string>
    <string name="pref_default_email_address">coursegforme@gmail.com
</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings2">SettingsActivity2</string>
    <string name="title_email_address">Email address</string>
    <string name="tile_favorite_social">Favorite Social Network</string>
    <string name="todo">TODO</string>


    <!-- Strings used for fragments for navigation -->

</resources>